initial setup and dummy components

--- a/src/docs/asciidoc/index.adoc
+++ b/src/docs/asciidoc/index.adoc
@@ -1,8 +1,9 @@
-= Spring Boot Service
+= Spring Modulith Example
 
 Lorem Ipsum
 
 == Index
 
 * link:api.html[API Documentation]
+* link:architecture.html[Architecture Documentation]
 * link:domain.adoc[Domain Documentation]
